# Space-game

./: log.txt
lab1/src/: CMakeLists.txt  README.md  input1.txt  log.txt  nasa.cpp  nasa.h  output.txt  ships  ships.cpp  spacecraft.cpp  spacecraft.h  test21  test_spacecraft.cpp
